i now have a working add command